--- a/themes/backendbrasil/layout/partials/menu.hbs
+++ b/themes/backendbrasil/layout/partials/menu.hbs
@@ -11,10 +11,10 @@
 
   <div class="navbar-menu" id="mainMenu">
     <div class="navbar-end">
-      <a href="http://www.url.com" class="navbar-item is-uppercase">{{__ 'menu.about'}}</a>
-      <a href="http://www.url.com" class="navbar-item is-uppercase">{{__ 'menu.jobs'}}</a>
-      <a href="http://www.url.com" class="navbar-item is-uppercase">{{__ 'menu.blog'}}</a>
-      <a href="http://www.url.com" class="navbar-item be--navbar-item--join">
+      <a href="http://www.url.com" class="navbar-item has-text-weight-semibold is-uppercase">{{__ 'menu.about'}}</a>
+      <a href="http://www.url.com" class="navbar-item has-text-weight-semibold is-uppercase">{{__ 'menu.jobs'}}</a>
+      <a href="http://www.url.com" class="navbar-item has-text-weight-semibold is-uppercase">{{__ 'menu.blog'}}</a>
+      <a href="http://www.url.com" class="navbar-item has-text-weight-semibold be--navbar-item--join">
         <span class="icon"><i class="fab fa-github fa-lg"></i></span>
         {{__ 'menu.join'}}
       </a>
