--- a/themes/backendbrasil/source/_scss/home.scss
+++ b/themes/backendbrasil/source/_scss/home.scss
@@ -67,6 +67,7 @@
 
   > .tile {
     margin-bottom: 2rem !important;
+    box-shadow: 0 9px 11px rgba(#000,0.05), 0 9px 10px rgba(#000,0.075);
   }
 
   &--p {
