improvements for home-projects and home-background

--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -51,8 +51,8 @@
     </article>
   {{/each}}
 
-  <div class="container has-text-right">
-    <a href="http://www.url.com" class="button">{{__ 'show.more'}}</a>
+  <div class="tile is-flex-full">
+    <a href="http://www.url.com" class="button">{{__ 'show.all'}}</a>
   </div>
 </section>
 
