--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -57,50 +57,48 @@
 </section>
 
 <section class="events tile-is-flexible tile is-ancestor">
-  <article class="tile is-parent is-12">
-    <h2 class="title">{{_p 'events.title'}}</h2>
+  <article class="tile is-flex-full">
+    <h2 class="title">{{_p 'events.next_events'}}</h2>
   </article>
 
-  <section class="tile tile-is-flexible is-parent events">
-    {{#each site.data.events}}
-      <article class="
-        tile block block-transparent is-flex-half is-child has-text-left
-        {{#gt @index 1}}
-          is-hidden
-        {{/gt}}
-      ">
-        <h4 class="is-size-4 has-text-weight-bold">
-          {{title}}
-        </h4>
+  {{#each site.data.events}}
+    <article class="
+      tile block block-transparent is-flex-one-third no-grow is-child
+      {{#gt @index 1}}
+        is-hidden
+      {{/gt}}
+    ">
+      <h4 class="is-size-4 has-text-weight-bold">
+        {{title}}
+      </h4>
 
-        <ul>
-          {{#each flags}}
-            <li class="flag">
-              <i class="fas fa-{{icon}}"></i>
-              {{_p 'events' flag}}
-            </li>
-          {{/each}}
-        </ul>
+      <ul>
+        {{#each flags}}
+          <li class="flag">
+            <i class="fas fa-{{icon}}"></i>
+            {{_p 'events' flag}}
+          </li>
+        {{/each}}
+      </ul>
 
-        <p>
-          <i class="fas fa-calendar"></i>
-          {{date}}
-        </p>
+      <p>
+        <i class="fas fa-calendar"></i>
+        {{date}}
+      </p>
 
-        <p>
-          <i class="fas fa-map"></i>
-          {{address}}
-        </p>
+      <p>
+        <i class="fas fa-map"></i>
+        {{address}}
+      </p>
 
-        <p>
-          <i class="fas fa-users"></i>
-          {{participants.current}} / {{participants.max}}
-        </p>
+      <p>
+        <i class="fas fa-users"></i>
+        {{participants.current}} / {{participants.max}}
+      </p>
 
-        <a href="http://www.url.com" class="button">{{__ 'events.confirm'}}</a>
-      </article>
-    {{/each}}
-  </section>
+      <a href="http://www.url.com" class="button">{{__ 'events.confirm'}}</a>
+    </article>
+  {{/each}}
 </section>
 
 <section class="posts tile-is-flexible tile is-ancestor">
