--- a/themes/backendbrasil/source/_scss/components.scss
+++ b/themes/backendbrasil/source/_scss/components.scss
@@ -1,9 +1,5 @@
-.block {
-  $color: darken($secondary, 18%);
-  color: darken($color, 10%);
-  padding: 1rem;
-  border-radius: $radius;
-  background-color: #fff;
+%basic-shadow {
+  box-shadow: 0 9px 11px rgba(#000,0.05), 0 9px 10px rgba(#000,0.075);
 }
 
 %has-default-padding {
@@ -13,4 +9,13 @@
 %backendbr-styled-title {
   font-weight: bold;
   color: $text;
+}
+
+.block {
+  $color: darken($secondary, 18%);
+  color: darken($color, 10%);
+  padding: 1rem;
+  border-radius: $radius;
+  background-color: #fff;
+  @extend %basic-shadow;
 }
