--- a/themes/backendbrasil/source/_scss/components.scss
+++ b/themes/backendbrasil/source/_scss/components.scss
@@ -2,6 +2,10 @@
   box-shadow: 0 9px 11px rgba(#000,0.05), 0 9px 10px rgba(#000,0.075);
 }
 
+%inter-section-margin {
+  margin-top: 2rem;
+}
+
 %has-default-padding {
   padding: 0 3rem;
 }
