add two more posts for examples and fix posts section on homepage

--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -104,33 +104,39 @@
 </section>
 
 <section class="posts tile-is-flexible tile is-ancestor">
-  <article class="tile is-parent is-12">
-    <h2 class="title">{{_p 'follow_blog'}}</h2>
+  <article class="tile is-flex-full">
+    <h2 class="title">{{_p 'blog.latest'}}</h2>
   </article>
 
-  <section class="tile tile-is-flexible is-parent">
+  <section class="tile tile-is-flexible is-flex-full">
     {{#each site.posts.data}}
       <article class="
-        tile is-flex-full-mobile is-flex-one-third is-child has-text-left
+        tile is-flex-full-mobile no-grow no-shrink is-flex-one-third is-child has-text-left
         {{#gt @index 2}}
           is-hidden
         {{/gt}}
       ">
         <div class="posts--thumbnail">
-          <img src="{{thumbnail}}" alt=""/>
+          <a href="{{path}}" title="{{title}}">
+            <img src="{{thumbnail}}" alt="{{thumbnail_alt}}"/>
+          </a>
         </div>
 
         <ul class="posts--categories">
           {{#each categories.data}}
-            <li>{{name}}</li>
+            <li>
+              <a href="{{path}}" title="{{name}}">{{name}}</a>
+            </li>
           {{/each}}
         </ul>
 
         <h4 class="posts--title has-text-weight-semibold is-size-5">
-          {{title}}
+          <a href="{{path}}" title="{{title}}">
+            {{title}}
+          </a>
         </h4>
 
-        <p>{{description}}</p>
+        <p><a href="{{path}}" title="{{description}}">{{description}}</a></p>
       </article>
     {{/each}}
   </section>
