--- a/themes/backendbrasil/source/_scss/components.scss
+++ b/themes/backendbrasil/source/_scss/components.scss
@@ -15,6 +15,10 @@
   color: $text;
 }
 
+%color-inherit {
+  color: inherit !important;
+}
+
 .block {
   $color: darken($secondary, 18%);
   color: darken($color, 10%);
