--- a/themes/backendbrasil/source/_scss/home.scss
+++ b/themes/backendbrasil/source/_scss/home.scss
@@ -174,9 +174,29 @@
   @extend %inter-section-margin;
   justify-content: flex-start;
 
-  &--title {
-    text-transform: uppercase;
-    padding-bottom: 0.75rem;
+  section > article.tile {
+    margin-bottom: 2rem !important;
+
+    @media screen and (min-width: $tablet) {
+      margin-bottom: 0 !important;
+    }
+  }
+
+  &--title, p {
+    color: $text;
+    
+    a { 
+      @extend %color-inherit;
+    }
+  }
+
+  .title {
+    padding: 3rem 0 1.5rem;
+  }
+
+  &--thumbnail img {
+    width: 100%;
+    height: auto;
   }
 
   &--categories {
@@ -190,6 +210,10 @@
       padding: 0.25rem 0.5rem;
       margin-right: 0.25rem;
       margin-bottom: 0.5rem;
+
+      a { 
+        @extend %color-inherit;
+      }
     }
   }
 }
