--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -118,7 +118,7 @@
       ">
         <div class="posts--thumbnail">
           <a href="{{path}}" title="{{title}}">
-            <img src="{{thumbnail}}" alt="{{thumbnail_alt}}"/>
+            <img src="{{imgsrc thumbnail}}" alt="{{thumbnail_alt}}"/>
           </a>
         </div>
 
@@ -142,14 +142,14 @@
   </section>
 </section>
 
-<section class="partners tile is-ancestor">
-  <section class="tile tile-is-flexible is-parent is-6">
+<section class="partners tile tile-is-flexible is-ancestor">
+  <section class="tile tile-is-flexible is-flex-half is-flex-full-mobile">
     <article class="tile is-child is-flex-full">
-      <h2 class="is-size-2">{{_p 'sponsors'}}</h2>
+      <h2 class="title">{{_p 'sponsors'}}</h2>
     </article>
 
     {{#each site.data.partners_sponsors.sponsors}}
-      <article class="tile is-child is-flex-one-quarter">
+      <article class="tile is-child is-flex-one-quarter no-grow no-shrink">
         <a href="{{url}}" title="{{name}}" target="_blank">
           <img src="{{imgsrc image}}" alt="{{image_description}}"/>
         </a>
@@ -157,13 +157,13 @@
     {{/each}}
   </section>
 
-  <section class="tile tile-is-flexible is-parent is-6">
+  <section class="tile tile-is-flexible is-flex-half is-flex-full-mobile">
     <article class="tile is-child is-flex-full">
-      <h2 class="is-size-2">{{_p 'partners'}}</h2>
+      <h2 class="title">{{_p 'partners'}}</h2>
     </article>
 
     {{#each site.data.partners_sponsors.partners}}
-      <article class="tile is-child is-flex-one-quarter">
+      <article class="tile is-child is-flex-one-quarter no-grow no-shrink">
         <a href="{{url}}" title="{{name}}" target="_blank">
           <img src="{{imgsrc image}}" alt="{{image_description}}"/>
         </a>
