--- a/themes/backendbrasil/layout/partials/footer.hbs
+++ b/themes/backendbrasil/layout/partials/footer.hbs
@@ -35,18 +35,18 @@
   </article>
 </section>
 
-<footer class="footer level has-default-padding">
-  <article class="level-left has-text-left">
-    <img src="/Logo-Horizontal.png" width="100"/>
-    <p>Produzido com pela comunidade</p>
+<footer class="footer tile is-ancestor tile-is-flexible has-default-padding">
+  <article class="tile is-flex-half is-flex-full-mobile">
+    <img src="/Logo-Horizontal.png" width="200"/>
+    <p>{{__ 'footer.copyright'}}</p>
   </article>
 
-  <article class="level-right">
+  <article class="tile is-flex-half is-flex-full-mobile">
     <nav class="navbar footer-links">
       <div class="navbar-menu">
-        <a href="test" class="navbar-item">Quem Somos</a>
-        <a href="test" class="navbar-item">Vagas</a>
-        <a href="test" class="navbar-item">Blog</a>
+        <a href="test" class="navbar-item">{{__ 'footer.about'}}</a>
+        <a href="test" class="navbar-item">{{__ 'footer.jobs'}}</a>
+        <a href="test" class="navbar-item">{{__ 'footer.blog'}}</a>
       </div>
     </nav>
 
