--- a/themes/backendbrasil/layout/partials/footer.hbs
+++ b/themes/backendbrasil/layout/partials/footer.hbs
@@ -44,9 +44,9 @@
   <article class="tile is-flex-half is-flex-full-mobile">
     <nav class="navbar footer-links">
       <div class="navbar-menu">
-        <a href="test" class="navbar-item">{{__ 'footer.about'}}</a>
-        <a href="test" class="navbar-item">{{__ 'footer.jobs'}}</a>
-        <a href="test" class="navbar-item">{{__ 'footer.blog'}}</a>
+        <a href="test" class="has-text-weight-bold navbar-item">{{__ 'footer.about'}}</a>
+        <a href="test" class="has-text-weight-bold navbar-item">{{__ 'footer.jobs'}}</a>
+        <a href="test" class="has-text-weight-bold navbar-item">{{__ 'footer.blog'}}</a>
       </div>
     </nav>
 
