reorder tasks, add svg support and more

--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -1,6 +1,6 @@
 <section class="home-header tile tile-is-flexible">
   <article class="tile is-child is-flex-full is-flex-two-fifths-mobile home-header--logo">
-    <img src="/logo-horizontal.png" alt="Logo BackEndBrasil"/>
+    <img src="{{imgsrc 'logo-horizontal.png'}}" alt="Logo BackEndBrasil"/>
   </article>
 
   <article class="tile is-flex-full is-flex-three-fifths-mobile home-header--intro">
