--- a/themes/backendbrasil/layout/partials/footer.hbs
+++ b/themes/backendbrasil/layout/partials/footer.hbs
@@ -37,7 +37,7 @@
 
 <footer class="footer tile is-ancestor tile-is-flexible has-default-padding">
   <article class="tile is-flex-half is-flex-full-mobile">
-    <img src="/Logo-Horizontal.png" width="200"/>
+    <img src="{{imgsrc 'Logo-Horizontal.png'}}" width="200"/>
     <p>{{__ 'footer.copyright'}}</p>
   </article>
 
