--- a/themes/backendbrasil/layout/partials/head.hbs
+++ b/themes/backendbrasil/layout/partials/head.hbs
@@ -4,3 +4,15 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 <!-- Main CSS -->
 <link rel="stylesheet" href="/main.css" type="text/css" charset="utf-8">
+<style type="text/css" media="screen">
+  .svg-icon-lib {
+    border: 0 !important;
+    clip: rect(0 0 0 0) !important;
+    height: 1px !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    padding: 0 !important;
+    position: absolute !important;
+    width: 1px !important;
+  }
+</style>
