add icons, svg support fixes and links for social buttons

--- a/themes/backendbrasil/assets/styles/components.scss
+++ b/themes/backendbrasil/assets/styles/components.scss
@@ -27,3 +27,11 @@
   background-color: #fff;
   @extend %basic-shadow;
 }
+
+.svgicon {
+  fill: currentColor;
+  width: 1em;
+  height: 1em;
+  vertical-align: middle;
+  overflow: hidden;
+}
