--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -1,9 +1,9 @@
 <section class="home-header tile tile-is-flexible">
-  <article class="tile is-child is-flex-full is-flex-two-fifths-mobile home-header--logo">
-    <img src="{{imgsrc 'logo-horizontal.png'}}" alt="Logo BackEndBrasil"/>
+  <article class="tile is-child is-flex-full no-grow no-shrink is-flex-half-mobile home-header--logo">
+    <img src="{{imgsrc 'logo.svg'}}" alt="Logo BackEndBrasil"/>
   </article>
 
-  <article class="tile is-flex-full is-flex-three-fifths-mobile home-header--intro">
+  <article class="tile is-flex-full is-flex-half-mobile no-grow no-shrink home-header--intro">
     <h3 class="is-size-3">
       {{__ 'home.header.title'}}
       <strong>{{__ 'home.header.subtitle'}}</strong>
