--- a/themes/backendbrasil/layout/partials/buttons.hbs
+++ b/themes/backendbrasil/layout/partials/buttons.hbs
@@ -1,20 +1,20 @@
 <article class="social-buttons">
-  <a class="button" href="">
+  <a class="button" href="https://twitter.com/{{config.twitter}}">
     <i class="fab fa-twitter"></i>
     Twitter
   </a>
 
-  <a class="button" href="">
+  <a class="button" href="{{config.slack}}">
     <i class="fab fa-slack"></i>
     Slack
   </a>
 
-  <a class="button" href="">
+  <a class="button" href="https://github.com/{{config.github}}">
     <i class="fab fa-github"></i>
     Github
   </a>
 
-  <a class="button" href="">
+  <a class="button" href="https://meetup.com/pt-BR/{{config.meetup}}">
     <i class="fab fa-meetup"></i>
     Meetup
   </a>
