--- a/themes/backendbrasil/layout/partials/menu.hbs
+++ b/themes/backendbrasil/layout/partials/menu.hbs
@@ -1,6 +1,12 @@
 <nav class="navbar be--navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item be--navbar-item--logo has-text-weight-bold is-size-5" href="#">backend &lt;brasil&gt;</a>
+    <!--
+      <a class="navbar-item be--navbar-item--logo has-text-weight-bold is-size-5" href="#">backend &lt;brasil&gt;</a>
+    !-->
+
+    <a class="navbar-item be--navbar-item--logo" href="#">
+      {{> svg '#white-logo'}}
+    </a>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="mainMenu">
       <span aria-hidden="true"></span>
