fix article attr

--- a/themes/backendbrasil/layout/partials/buttons.hbs
+++ b/themes/backendbrasil/layout/partials/buttons.hbs
@@ -1,21 +1,21 @@
 <article class="social-buttons">
-  <a class="button" href="https://twitter.com/{{config.twitter}}">
-    <i class="fab fa-twitter"></i>
+  <a target="_blank" class="button" href="https://twitter.com/{{config.twitter}}">
+    <i target="_blank" class="fab fa-twitter"></i>
     Twitter
   </a>
 
-  <a class="button" href="{{config.slack}}">
-    <i class="fab fa-slack"></i>
+  <a target="_blank" class="button" href="{{config.slack}}">
+    <i target="_blank" class="fab fa-slack"></i>
     Slack
   </a>
 
-  <a class="button" href="https://github.com/{{config.github}}">
-    <i class="fab fa-github"></i>
+  <a target="_blank" class="button" href="https://github.com/{{config.github}}">
+    <i target="_blank" class="fab fa-github"></i>
     Github
   </a>
 
-  <a class="button" href="https://meetup.com/pt-BR/{{config.meetup}}">
-    <i class="fab fa-meetup"></i>
+  <a target="_blank" class="button" href="https://meetup.com/pt-BR/{{config.meetup}}">
+    <i target="_blank" class="fab fa-meetup"></i>
     Meetup
   </a>
 </article>
