add js func to home projects

--- a/themes/backendbrasil/assets/styles/home.scss
+++ b/themes/backendbrasil/assets/styles/home.scss
@@ -76,6 +76,8 @@
     @extend %home-bg-clip;
   }
 
+  .is-extra-child { margin-top: 2rem !important; }
+
   .project {
     margin-bottom: 2rem !important;
     align-content: stretch;
