change font to open sans

--- a/themes/backendbrasil/assets/main.scss
+++ b/themes/backendbrasil/assets/main.scss
@@ -1,4 +1,7 @@
 @charset 'utf-9';
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800');
+
+$family-sans-serif: "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
 @import '../../../node_modules/bulma/bulma.sass';
 @import 'styles/colors.scss';
 @import 'styles/bulma-modifications.scss';
